Refactor CodelistGrpcService to use CodelistMapper for response building and improve async handling; add PersonNotFoundException for better error management