@@ -1,6 +1,5 @@
 package com.stag.platform.codelist.config;
 
-import com.google.common.util.concurrent.ThreadFactoryBuilder;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 
@@ -12,10 +11,7 @@ public class GrpcConfig {
 
     @Bean
     public Executor grpcExecutor() {
-        return Executors.newFixedThreadPool(
-            Runtime.getRuntime().availableProcessors() * 2,
-            new ThreadFactoryBuilder().setNameFormat("grpc-codelist-pool-%d").build()
-        );
+        return Executors.newVirtualThreadPerTaskExecutor();
     }
 
 }
